# oldwin

./: .clippy.toml  .rustfmt.toml  .taplo.toml  Cargo.toml  LICENSE  README.md
oldwin/: Cargo.toml
oldwin-targets/: Cargo.toml  build.rs
oldwin-vc-ltl5/: Cargo.toml
oldwin-vc-ltl5/crates/x86-vista/: Cargo.toml
oldwin-vc-ltl5/crates/x86-vista/lib/: libvcruntime.lib  vcruntime.lib
oldwin-vc-ltl5/crates/x86-win10/: Cargo.toml
oldwin-vc-ltl5/crates/x86-win10/lib/: libucrt.lib  libvcruntime.lib  ucrt.lib  vccorlib140.pacth.lib  vcruntime.lib
oldwin-vc-ltl5/crates/x86-win7/: Cargo.toml
oldwin-vc-ltl5/crates/x86-win8/: Cargo.toml
oldwin-vc-ltl5/crates/x86-win8/lib/: libvcruntime.lib  vccorlib140.pacth.lib  vcruntime.lib
oldwin-vc-ltl5/crates/x86-xp/: Cargo.toml
oldwin-vc-ltl5/crates/x86-xp-part1/: Cargo.toml
oldwin-vc-ltl5/crates/x86-xp-part1/lib/: libvcruntime.lib
oldwin-vc-ltl5/crates/x86-xp-part2/: Cargo.toml
oldwin-vc-ltl5/crates/x86-xp-part2/lib/: vcruntime.lib
oldwin-vc-ltl5/crates/x86-xp/lib/: libvcruntime.lib  vcruntime.lib
oldwin-vc-ltl5/crates/x86_64-vista/: Cargo.toml
oldwin-vc-ltl5/crates/x86_64-vista/lib/: libvcruntime.lib  vcruntime.lib
oldwin-vc-ltl5/crates/x86_64-win10/: Cargo.toml
oldwin-vc-ltl5/crates/x86_64-win10/lib/: libucrt.lib  libvcruntime.lib  ucrt.lib  vccorlib140.pacth.lib  vcruntime.lib
oldwin-vc-ltl5/crates/x86_64-win7/: Cargo.toml
oldwin-vc-ltl5/crates/x86_64-win8/: Cargo.toml
oldwin-vc-ltl5/crates/x86_64-win8/lib/: libvcruntime.lib  vccorlib140.pacth.lib  vcruntime.lib
oldwin-vc-ltl5/crates/x86_64-xp/: Cargo.toml  build.rs
oldwin-vc-ltl5/crates/x86_64-xp-part1/: Cargo.toml
oldwin-vc-ltl5/crates/x86_64-xp-part1/lib/: libvcruntime.lib
oldwin-vc-ltl5/crates/x86_64-xp-part2/: Cargo.toml
oldwin-vc-ltl5/crates/x86_64-xp-part2/lib/: vcruntime.lib
oldwin-vc-ltl5/crates/x86_64-xp/lib/: libvcruntime.lib
oldwin-yy-thunks/: Cargo.toml
oldwin-yy-thunks/crates/x86-vista/: Cargo.toml
oldwin-yy-thunks/crates/x86-win10/: Cargo.toml
oldwin-yy-thunks/crates/x86-win7/: Cargo.toml
oldwin-yy-thunks/crates/x86-win8/: Cargo.toml
oldwin-yy-thunks/crates/x86-xp/: Cargo.toml
oldwin-yy-thunks/crates/x86_64-vista/: Cargo.toml
oldwin-yy-thunks/crates/x86_64-win10/: Cargo.toml
oldwin-yy-thunks/crates/x86_64-win7/: Cargo.toml
oldwin-yy-thunks/crates/x86_64-win8/: Cargo.toml
oldwin-yy-thunks/crates/x86_64-xp/: Cargo.toml
oldwin/src/: lib.rs
scripts/: publish.sh
