[package]
name = "oldwin-targets"
version = "0.1.0"
description.workspace = true
edition.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
license-file.workspace = true
categories.workspace = true

[dependencies]
oldwin-vc-ltl5 = { version = "0.1.0", path = "../oldwin-vc-ltl5", optional = true }
oldwin-yy-thunks = { version = "0.1.1", path = "../oldwin-yy-thunks", optional = true }

[build-dependencies]
mutually_exclusive_features = "0.1.0"

[features]
default = ["vc-ltl5", "win7"]

vc-ltl5 = ["yy-thunks", "dep:oldwin-vc-ltl5"]
yy-thunks = ["dep:oldwin-yy-thunks"]

xp = ["oldwin-vc-ltl5?/xp", "oldwin-yy-thunks?/xp"]
vista = ["oldwin-vc-ltl5?/vista", "oldwin-yy-thunks?/vista"]
win7 = ["oldwin-vc-ltl5?/win7", "oldwin-yy-thunks?/win7"]
win8 = ["oldwin-vc-ltl5?/win8", "oldwin-yy-thunks?/win8"]
win10 = ["oldwin-vc-ltl5?/win10", "oldwin-yy-thunks?/win10"]
