[package]
name = "oldwin-vc-ltl5"
version = "0.1.1"
edition.workspace = true
authors.workspace = true
readme.workspace = true
description.workspace = true
license-file.workspace = true
repository.workspace = true
categories.workspace = true

[target.'cfg(all(target_arch = "x86_64", target_env = "msvc"))'.dependencies]
oldwin-platform-vc-ltl5-x86_64-vista = { version = "0.1.1", path = "./crates/x86_64-vista", optional = true }
oldwin-platform-vc-ltl5-x86_64-win10 = { version = "0.1.1", path = "./crates/x86_64-win10", optional = true }
oldwin-platform-vc-ltl5-x86_64-win7 = { version = "0.1.1", path = "./crates/x86_64-win7", optional = true }
oldwin-platform-vc-ltl5-x86_64-win8 = { version = "0.1.1", path = "./crates/x86_64-win8", optional = true }
oldwin-platform-vc-ltl5-x86_64-xp-part1 = { version = "0.1.1", path = "./crates/x86_64-xp-part1", optional = true }
oldwin-platform-vc-ltl5-x86_64-xp-part2 = { version = "0.1.1", path = "./crates/x86_64-xp-part2", optional = true }

[target.'cfg(all(target_arch = "x86", target_env = "msvc"))'.dependencies]
oldwin-platform-vc-ltl5-x86-vista = { version = "0.1.1", path = "./crates/x86-vista", optional = true }
oldwin-platform-vc-ltl5-x86-win10 = { version = "0.1.1", path = "./crates/x86-win10", optional = true }
oldwin-platform-vc-ltl5-x86-win7 = { version = "0.1.1", path = "./crates/x86-win7", optional = true }
oldwin-platform-vc-ltl5-x86-win8 = { version = "0.1.1", path = "./crates/x86-win8", optional = true }
oldwin-platform-vc-ltl5-x86-xp-part1 = { version = "0.1.1", path = "./crates/x86-xp-part1", optional = true }
oldwin-platform-vc-ltl5-x86-xp-part2 = { version = "0.1.1", path = "./crates/x86-xp-part2", optional = true }

[features]
xp = [
  "oldwin-platform-vc-ltl5-x86_64-xp-part1",
  "oldwin-platform-vc-ltl5-x86_64-xp-part2",
  "oldwin-platform-vc-ltl5-x86-xp-part1",
  "oldwin-platform-vc-ltl5-x86-xp-part2",
]
vista = [
  "oldwin-platform-vc-ltl5-x86_64-vista",
  "oldwin-platform-vc-ltl5-x86-vista",
]
win7 = [
  "oldwin-platform-vc-ltl5-x86_64-win7",
  "oldwin-platform-vc-ltl5-x86-win7",
]
win8 = [
  "oldwin-platform-vc-ltl5-x86_64-win8",
  "oldwin-platform-vc-ltl5-x86-win8",
]
win10 = [
  "oldwin-platform-vc-ltl5-x86_64-win10",
  "oldwin-platform-vc-ltl5-x86-win10",
]
